# oinkbank

./: .env  README.md  database.db  pyproject.toml
app/: dependencies.py  main.py
app/examples/: branch.post.json
app/models/: __init__.py  account.py  address.py  area.py  branch.py  report.py  transaction.py  user.py
app/routers/api/: __init__.py  accounts.py  accounts_reports.py  areas.py  branches.py  reports.py  token.py  transactions.py  users.py
models/: docker-compose.yml
